--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,59 @@
+# Librairies de base pour la data science
 numpy==1.24.3
 pandas==2.0.2
 scikit-learn==1.3.0
 scipy==1.10.1
 matplotlib==3.7.2
 seaborn==0.12.2
+
+# Visualisation interactive
 plotly==5.15.0
+dash==2.12.1
+dash-bootstrap-components==1.4.2
+streamlit==1.25.0
+
+# Analyse statistique
 statsmodels==0.14.0
+
+# Collecte de données financières
 yfinance==0.2.28
 fredapi==0.5.1
 pandas-datareader==0.10.0
+
+# Manipulation de données
+pyarrow==12.0.1
+openpyxl==3.1.2
+
+# Base de données
 pymongo==4.4.1
 SQLAlchemy==2.0.19
-pyarrow==12.0.1
-pytest==7.4.0
+
+# Configurations et environnement
 python-dotenv==1.0.0
+pyyaml==6.0.1
+
+# Tests
+pytest==7.4.0
+pytest-cov==4.1.0
+
+# Utilitaires
 tqdm==4.65.0
-openpyxl==3.1.2
+joblib==1.3.1
+
+# Notebooks
 jupyter==1.0.0
 notebook==6.5.4
-streamlit==1.25.0
-dash==2.12.1
-dash-bootstrap-components==1.4.2
-pytest-cov==4.1.0
+
+# Backtesting
 backtrader==1.9.78.123
 pyfolio==0.9.2
 vectorbt==0.25.3
+
+# Web scraping (pour données complémentaires)
 beautifulsoup4==4.12.2
 requests==2.31.0
 lxml==4.9.3
+
+# Packaging et distribution
+setuptools>=65.0.0
+wheel>=0.37.1
